# SchedVisualizer

./: .gitignore  Planning.md  QualityImprovement.md  README.md  Refactoring.md  project.toml  pyproject.toml
.github/workflows/: ci.yml
examples/: example_gantt.py  full_dashboard.py  parallel_machines_demo.py
output/: pm_dashboard.html  pm_raw.html  report.html
src/sched_viz/: __init__.py  application.py  config.py  engine.py
src/sched_viz/charts/: __init__.py  base.py  duration.py  gantt.py  heatmap.py  registry.py  utilization.py
src/sched_viz/core/: __init__.py  color_registry.py
src/sched_viz/domain/: __init__.py  models.py  solution.py
src/sched_viz/export/: __init__.py  base.py  dashboard.py
src/sched_viz/renderers/: __init__.py  duration_renderer.py  gantt_renderer.py  heatmap_renderer.py  utilization_renderer.py
src/sched_viz/schema/: __init__.py  input_schema.py
src/sched_viz/transforms/: __init__.py  base.py  duration_transform.py  gantt_transform.py  heatmap_transform.py  utilization_transform.py
tests/: test_additional_visualizations.py  test_chart_registry.py  test_charts.py  test_dashboard_exporter.py  test_domain.py  test_engine.py  test_renderers.py  test_schema.py  test_transforms.py
tests/fixtures/: factory.py
